working on creating a language context because of the api that needs to utilize url routes

--- a/frontend/public/locales/en/common.json
+++ b/frontend/public/locales/en/common.json
@@ -1,5 +1,6 @@
 {
 	"headline1": "Web Portal", 
 	"headline2": "Powered by LEAD.Latinoamérica", 
-	"headline3": "Connecting Students to opportunities in the community"
+	"headline3": "Connecting Students to ", 
+	"headline4": "opportunities in the community"
 }
