--- a/frontend/public/locales/es/common.json
+++ b/frontend/public/locales/es/common.json
@@ -1,5 +1,6 @@
 {
 	"headline1": "Portal Web", 
 	"headline2": "Energizado por LEAD.Latinoamérica", 
-	"headline3": "Conectando a los estudiantes con oportunidades en la comunidad"
+	"headline3": "Conectando a los estudiantes", 
+	"headline4": "con oportunidades en la comunidad"
 }
