finished the checkboxes

--- a/frontend/public/locales/en/common.json
+++ b/frontend/public/locales/en/common.json
@@ -20,9 +20,9 @@
 		"link": "See our Internship Opportunities"
 	},
 	"programs": {
-		"headline": "Programas", 
-		"bio": "Seleccione entre una amplia gama de programas en su comunidad que lo ayudarán a prosperar.", 
-		"link": "Vea nuestras Oportunidades de Programas"
+		"headline": "Programs", 
+		"bio": "Select from a wide range of programs in your community that will help you thrive.", 
+		"link": "See our Program Opportunities"
 	}, 
 	"purpose": "Our Purpose", 
 	"purposeArray": {
