updated programoverview and mission district text

--- a/frontend/public/locales/es/common.json
+++ b/frontend/public/locales/es/common.json
@@ -3,7 +3,7 @@
 	"headline2": "Energizado por LEAD.Latinoamérica", 
 	"headline3": "Conectando a los estudiantes", 
 	"headline4": "con oportunidades en la comunidad", 
-	"missionDistrict": "Distrito de la Misión", 
+	"missionDistrict": "Mission District", 
 	"scholarships": {
 		"headline": "Becas", 
 		"bio": "Encuentre becas para ayudar a financiar su viaje educativo.", 
