--- a/frontend/src/language/locales/es/navbar.json
+++ b/frontend/src/language/locales/es/navbar.json
@@ -7,5 +7,6 @@
 	"portal": "Portal de la Organización", 
 	"home": "Hogar", 
 	"addOrg": "Agregue su Organización", 
+	"ourTeam": "Nuestro Equipo", 
 	"donate": "Donar"
 }
