--- a/frontend/src/language/locales/en/navbar.json
+++ b/frontend/src/language/locales/en/navbar.json
@@ -8,5 +8,6 @@
 	"home": "Home", 
 	"addOrg": "Add Your Org", 
 	"ourTeam": "Our Team", 
-	"donate": "Donate"
+	"donate": "Donate", 
+	"summer": "Summer"
 }
