--- a/frontend/src/language/locales/es/navbar.json
+++ b/frontend/src/language/locales/es/navbar.json
@@ -8,5 +8,6 @@
 	"home": "Hogar", 
 	"addOrg": "Agregue su Organización", 
 	"ourTeam": "Nuestro Equipo", 
-	"donate": "Donar"
+	"donate": "Donar",
+	"summer": "Verano"
 }
