--- a/frontend/src/language/locales/en/footer.json
+++ b/frontend/src/language/locales/en/footer.json
@@ -3,5 +3,5 @@
 	"programs": "Programs", 
 	"internships": "Internships", 
 	"ourTeam": "Our Team", 
-	"addYourOrg": "Add your Org"
+	"addYourOrg": "Add a Program"
 }
