--- a/frontend/src/language/locales/en/navbar.json
+++ b/frontend/src/language/locales/en/navbar.json
@@ -6,7 +6,7 @@
 	"internships": "Internships", 
 	"portal": "Org Portal", 
 	"home": "Home", 
-	"addOrg": "Add Your Org", 
+	"addOrg": "Add a Program", 
 	"ourTeam": "Our Team", 
 	"donate": "Donate", 
 	"summer": "Summer"
