--- a/frontend/src/language/locales/es/footer.json
+++ b/frontend/src/language/locales/es/footer.json
@@ -3,5 +3,5 @@
 	"programs": "Programas", 
 	"internships": "Pasantías", 
 	"ourTeam": "Nuestro Equipo", 
-	"addYourOrg": "Agregue su organización"
+	"addYourOrg": "Agregue su Programa"
 }
