--- a/frontend/src/language/locales/en/footer.json
+++ b/frontend/src/language/locales/en/footer.json
@@ -2,6 +2,8 @@
 	"explore": "Explore", 
 	"programs": "Programs", 
 	"internships": "Internships", 
+	"summer": "Summer",
+	"scholarships": "Scholarships",
 	"ourTeam": "Our Team", 
 	"addYourOrg": "Add a Program"
 }
