--- a/frontend/src/language/locales/en/navbar.json
+++ b/frontend/src/language/locales/en/navbar.json
@@ -4,7 +4,7 @@
 	"programs": "Programs", 
 	"scholarships": "Scholarships", 
 	"internships": "Internships", 
-	"portal": "Org Portal", 
+	"portal": "Get Involved", 
 	"home": "Home", 
 	"addOrg": "Add a Program", 
 	"ourTeam": "Our Team", 
