--- a/frontend/src/language/locales/es/footer.json
+++ b/frontend/src/language/locales/es/footer.json
@@ -2,6 +2,8 @@
 	"explore": "Explorar",
 	"programs": "Programas", 
 	"internships": "Pasantías", 
+	"summer": "Verano",
+	"scholarships": "Becas", 
 	"ourTeam": "Nuestro Equipo", 
 	"addYourOrg": "Agregue su Programa"
 }
