--- a/frontend/src/language/locales/es/navbar.json
+++ b/frontend/src/language/locales/es/navbar.json
@@ -6,7 +6,7 @@
 	"internships": "Pasantías", 
 	"portal": "Portal de la Organización", 
 	"home": "Hogar", 
-	"addOrg": "Agregue su Programa", 
+	"addOrg": "Involucrarse", 
 	"ourTeam": "Nuestro Equipo", 
 	"donate": "Donar",
 	"summer": "Verano"
