--- a/frontend/src/language/locales/en/common.json
+++ b/frontend/src/language/locales/en/common.json
@@ -29,6 +29,7 @@
 		"sentence1": "This portal ensures that students are made aware of all of the scholarships and opportunities available to them.", 
 		"sentence2": "Our goal is to streamline scholarship and opportunity listings, so that students and parents no longer have to review several sites or pages to see all that’s available to them.", 
 		"sentence3": "This portal provides our most updated list of opportunities available in your area. If you know of an opportunity that exists and you don't see it here, please let us know and we'll add it to ensure everyone has access to the same opportunities."
-	}
+	}, 
+	"noOpportunities": "There are no opporunities in this cateogry at this time. Please check back at a later date."
 	
 }
