updated after typo

--- a/frontend/src/language/locales/es/overview.json
+++ b/frontend/src/language/locales/es/overview.json
@@ -1,5 +1,5 @@
 {
-  "overview": "Vivisión de conjuntoew", 
+  "overview": "Visión de conjunto", 
   "signUp": "Inscribirse", 
   "saveToProfile": "Guardar en perfil", 
   "categories": "Categorías", 
