--- a/frontend/src/language/locales/en/overview.json
+++ b/frontend/src/language/locales/en/overview.json
@@ -1,6 +1,7 @@
 {
   "overview": "Overview",
   "signUp": "Sign Up",
+  "seeDetails": "See Details",
   "saveToProfile": "Save to Profile",
   "categories": "Categories",
   "deadline": "Deadline"
