--- a/frontend/src/language/locales/es/overview.json
+++ b/frontend/src/language/locales/es/overview.json
@@ -1,6 +1,7 @@
 {
   "overview": "Visión de conjunto",
   "signUp": "Inscribirse",
+  "seeDetails": "Ver Detalles",
   "saveToProfile": "Guardar en perfil",
   "categories": "Categorías",
   "deadline": "Plazo"
