updated all resources page

--- a/frontend/pages/local-resources/locale/en.json
+++ b/frontend/pages/local-resources/locale/en.json
@@ -1,4 +1,4 @@
 {
   "resources": "Resources", 
-  "blurb": "Ensure success with our comprehensive guide! Connect with invaluable local resources and opportunities tailored for growth. From academic assistance to enriching activities, we're dedicated to providing the tools you need. Experience peace of mind knowing you've got option, discover mentorship programs, and join a community committed to fostering everyone's potential. Together, let's light their path to a promising future."
+  "blurb": "Ensure success with our comprehensive guide! Connect with invaluable local resources and opportunities tailored for growth. From academic assistance to enriching activities, we're dedicated to providing the tools you need. Experience peace of mind knowing you've got options, discover mentorship programs, and join a community committed to fostering everyone's potential. Together, let's light their path to a promising future."
 }
